--- a/src/homeworks/hw4/start.ipynb
+++ b/src/homeworks/hw4/start.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,10 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# se demora 1.45 minutos\n",
     "dicts = df[categorical].to_dict(orient='records')\n",
     "X_val = dv.transform(dicts)\n",
     "y_pred = model.predict(X_val)"
@@ -105,22 +106,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.247488852238703\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(6.247488852238703)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
     "std_y_pred = np.std(y_pred)\n",
-    "print(std_y_pred)"
+    "std_y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2023\n",
+    "month = 3\n",
+    "\n",
+    "\n",
+    "df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_model(df, X_val,  output_file):\n",
+    "    y_pred = model.predict(X_val)\n",
+    "    \n",
+    "\n",
+    "    df_result = pd.DataFrame()\n",
+    "    df_result['ride_id'] = df['ride_id']\n",
+    "    df_result['predicted_duration'] = y_pred\n",
+    "\n",
+    "    \n",
+    "    df_result.to_parquet(\n",
+    "        output_file,\n",
+    "        engine='pyarrow',\n",
+    "        compression=None,\n",
+    "        index=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apply_model(df, X_val, 'predictions.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The size of the predictions.parquet file is 68641880 bytes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "file_size = os.path.getsize('predictions.parquet')\n",
+    "print(f\"The size of the predictions.parquet file is {file_size} bytes.\")\n"
    ]
   }
  ],
